# crforest

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: README.md  dgp.R  dgp.py  run_comprisk.py  run_crforest.py  run_rfsrc.R
bench/results/: results.csv
docs/: REFERENCES.md  benchmarks.md  equivalence-vs-rfsrc.md  prd.md  quickstart.md
examples/: shap_explain.py
src/comprisk/: __init__.py  _flat_tree_builder.py  _gpu_detect.py  _gpu_kernels.py  _hist_tree.py  _importance.py  _minimal_depth.py  _shap.py  _shap_alg2.py  _sklearn_compat.py  _splits.py  _tree.py  _validation.py  cause_specific_cox.py  cumulative_incidence.py  evaluation.py  fine_gray.py  forest.py  gray_test.py  penalized_fine_gray.py
src/crforest/: __init__.py  _aligned_rng.py  _binning.py  _estimators.py  _flat_tree_builder.py  _gpu_kernels.py  _hist_splits.py  _hist_tree.py  _importance.py  _minimal_depth.py  _sklearn_compat.py  _sparse_leaves.py  _splits.py  _time_grid.py  _tree.py  _tree_flat.py  forest.py  metrics.py
tests/: _tree_walkers.py  conftest.py  cross_check_calibration.R  cross_check_cmprsk.R  cross_check_crrp.R  cross_check_fastcmprsk.R  cross_check_riskRegression.R  test_binning.py  test_cause_specific_cox.py  test_cumulative_incidence.py  test_descend_flat_nogil.py  test_equivalence.py  test_equivalence_preset.py  test_estimators.py  test_evaluation.py  test_fine_gray.py  test_flat_tree.py  test_flat_tree_builder.py  test_forest.py  test_forest_device_dispatch.py  test_forest_flat_path.py  test_gpu_build_flat_tree.py  test_gpu_cpu_equivalence.py  test_gpu_detect.py  test_gpu_smoke.py  test_gpu_tier1_gates.py  test_gray_test.py  test_hist_splits.py  test_hist_splits_batched.py  test_hist_tree.py  test_importance.py  test_importance_oob.py  test_metrics.py  test_minimal_depth.py  test_nsplit.py  test_oob_predict_score.py  test_parallel_equivalence.py  test_penalized_fine_gray.py  test_performance.py  test_predict_chf.py  (+14 more)
tests/fixtures/: calib_pbc.csv  cmprsk_follic_data.csv  cmprsk_follic_fit.csv  cmprsk_pbc_data.csv  cmprsk_pbc_fit.csv  cmprsk_synth_data.csv  cmprsk_synth_fit.csv  crrp_follic_lasso_fit.csv  crrp_follic_mcp_fit.csv  crrp_follic_scad_fit.csv  crrp_pbc_lasso_fit.csv  crrp_pbc_mcp_fit.csv  crrp_pbc_scad_fit.csv  csc_follic_fit.csv  csc_pbc_fit.csv  cuminc_follic_fit.csv  cuminc_synth_data.csv  cuminc_synth_fit.csv  fastcmprsk_follic_lasso_fit.csv  fastcmprsk_follic_mcp_fit.csv  fastcmprsk_follic_scad_fit.csv  fastcmprsk_pbc_lasso_fit.csv  fastcmprsk_pbc_mcp_fit.csv  fastcmprsk_pbc_scad_fit.csv  gray_follic_fit.csv  gray_synth_fit.csv  pbc_predictions.csv  pbc_test_data.csv  rfsrc_toy_best_thresholds.parquet  rfsrc_toy_best_thresholds_logrank.parquet  rfsrc_var_select_follic.json  riskregression_pbc_score.csv
tests/validation/: test_alignment_compare_splits.py  test_alignment_init.py  test_baselines.py  test_calibrate.py  test_cli.py  test_config.py  test_datasets.py  test_equivalence_gate.py  test_gen_synthetic.py  test_harness_smoke.py  test_report.py  test_report_equivalence.py  test_runner.py  test_splits.py
validation/: README.md  __init__.py  __main__.py  baselines.py  bench_split_ntime.py  bench_vimp.py  calibrate.py  config.py  datasets.py  gen_datasets.R  gen_datasets.py  gen_rfsrc_baselines.R  gen_seer_breast.py  gen_splits.py  gen_synthetic.py  profile_fit.py  report.py  runner.py  splits.py
validation/alignment/: __init__.py  _ntime_grid_check.py  bootstrap_aligned_spike.py  cascade_diagnostic.py  cindex_from_cache.py  compare_cif.py  compare_splits.py  equivalence_gate.py  gen_fixtures.py  gen_var_select_oracle.R  grid_mismatch_falsification.py  ibs.py  mode_vs_perf.py  mode_vs_perf_aligned.py  mortality_cellwise.py  nsplit_convergence.py  per_tree_mortality.py  per_tree_permuted_mortality.py  per_tree_seeds_sweep.py  permutation_only_noise.py  rank_flip_diagnostic.py  report_equivalence.py  rfsrc_aligned_spike.py  rfsrc_full_aligned_spike.py  strict_alignment.py  tiebreak_diagnostic.py  uno_cindex_check.py  vimp_alignment.py  vimp_perm_replay.py  vimp_sanity.py  vimp_within_stability.py  within_vs_cross.py  z_cell_spike.py
validation/alignment/_rfsrc_patches/: README.md  importancePerm.c.patch  random.c.patch  regen.sh  splitSurv.c.patch  splitUtil.c.patch  survivalE.c.patch
validation/baselines/: follic.parquet  follic_logrank_cause1.parquet  follic_logrank_cause1_ns0.parquet  follic_ns0.parquet  hd.parquet  hd_logrank_cause1.parquet  hd_logrank_cause1_ns0.parquet  hd_ns0.parquet  pbc.parquet  pbc_logrank_cause1.parquet  pbc_logrank_cause1_ns0.parquet  pbc_ns0.parquet  synthetic.parquet  synthetic_logrank_cause1.parquet  synthetic_logrank_cause1_ns0.parquet  synthetic_ns0.parquet
validation/benches/: bench_fit.py  bench_split_kernel.py
validation/comparisons/: SEER_README.md  _fingerprint.py  _n75k_path_b_rescore.py  _n75k_path_b_rfsrc.R  _seer_path_b_rfsrc.R  n75k_path_b.py  seer_path_b.py  sksurv_oom.py
validation/data/: follic.parquet  hd.parquet  pbc.parquet  synthetic.parquet
validation/figures/: scaling_curve.py  scaling_walls.json
validation/spikes/: _lambda_helpers.py  shap_real_chf_bench.py
validation/spikes/eta/: _dgp.py  exp1_profile.py  exp2_ablation.py  exp3_lightgbm.py  exp4_bare_numba.py  exp5_njit_obs_bins.py  exp6_njit_candmask.py
validation/spikes/iota/: exp1_per_level_kernel.py  exp2_measure_gpu_cpu_gap.py  exp3_gpu_wall_single_tree.py  exp3b_gpu_profile_inline.py  exp4_best_split_v2_spike.py  exp5_100tree_ensemble_wall.py
validation/spikes/kappa/: exp1_chf_smoke.py  exp2_rfsrc.R  exp3_compare.py  exp4_multiseed_rfsrc.R  exp4a_crforest_dump.py  exp4b_aggregate.py  exp4c_win_crforest_dump.py  exp4d_win_aggregate.py  exp5_metric_attribution.py  exp6_binning_attribution.py  exp7_risk_scalar.py  exp8_gpu_scaling.py  exp8b_gpu_n250k_variance.py  exp9_ntree_cindex_curve.py  exp9b_rfsrc_ntree_curve.R
validation/spikes/lambda/: exp4_get_breakdown.py  (+8 more)
validation/splits/: follic.parquet  hd.parquet  pbc.parquet  synthetic.parquet
(+8 files in other folders)
