[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "comprisk"
version = "0.4.0"
description = "Python toolkit for competing risks: forest (RSF) + Fine-Gray subdistribution regression + Aalen-Johansen cumulative incidence + Gray's K-sample test + cause-specific Cox. Scales to n=10⁶ in ~1 min, 10–22× faster than randomForestSRC on real EHR data, scikit-learn-compatible."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [
    { name = "Sunny Yang", email = "guangy4@illinois.edu" },
    { name = "Wanqi Zhao", email = "wanqi.zhao@ucalgary.ca" },
]
keywords = [
    "survival-analysis",
    "competing-risks",
    "random-forest",
    "machine-learning",
    "biostatistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "joblib>=1.3",
    "numba>=0.58,<0.66",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.8",
    "pre-commit>=3.7",
    "pyarrow>=15.0",
]
maintainer = [
    "rpy2>=3.5",
]
gpu = [
    "cupy-cuda12x>=14",
    "nvidia-cuda-nvrtc-cu12>=12",
    "nvidia-cuda-runtime-cu12>=12",
]

[project.urls]
Homepage = "https://github.com/sunnyadn/comprisk"
Repository = "https://github.com/sunnyadn/comprisk"
Issues = "https://github.com/sunnyadn/comprisk/issues"
Changelog = "https://github.com/sunnyadn/comprisk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/comprisk"]

[tool.hatch.build.targets.sdist]
include = [
    "src/comprisk",
    "tests",
    "LICENSE",
    "NOTICE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "validation",
    "docs",
    ".github",
    ".gitignore",
    "uv.lock",
    "tests/validation",
    "**/__pycache__",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-m",
    "not slow",
]
markers = [
    "slow: long-running paired-seed validation harness tests (opt-in via -m slow)",
    "perf: performance gate tests",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long — formatter handles line length
    "N802",  # function name should be lowercase — X in test names for clarity
    "N803",  # argument name should be lowercase — X is sklearn convention
    "N806",  # variable in function should be lowercase — X is sklearn convention
]

[tool.ruff.lint.per-file-ignores]
# Spike code is short-lived and prioritizes readable Greek/math notation
# (×, α, β, γ, …) over ASCII conformance. Also exempt SIM115 (open without
# context manager) for one-shot logging in main().
"validation/spikes/**" = ["RUF001", "RUF002", "RUF003", "SIM115", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
